--- a/dailyExchange/dailyExchange/Base.lproj/Main.storyboard
+++ b/dailyExchange/dailyExchange/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Settings View Controller-->
+        <!--Settings-->
         <scene sceneID="dbj-Ja-WKj">
             <objects>
                 <viewController id="UfY-qF-KgV" customClass="SettingsViewController" customModule="dailyExchange" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="poo-YM-RjR">
-                                <rect key="frame" x="163" y="544" width="48" height="30"/>
+                                <rect key="frame" x="163" y="588" width="48" height="30"/>
                                 <state key="normal" title="Logout"/>
                                 <connections>
                                     <action selector="logoutTapped:" destination="UfY-qF-KgV" eventType="touchUpInside" id="eSw-99-AiG"/>
@@ -33,12 +33,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8Nq-NG-QMz"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Settings" id="rFl-9D-wmA" userLabel="Settings"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IHB-bc-ZL5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1342" y="-591"/>
+            <point key="canvasLocation" x="558" y="-580"/>
         </scene>
-        <!--Main View Controller-->
+        <!--$-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="dailyExchange" customModuleProvider="target" sceneMemberID="viewController">
@@ -48,21 +50,15 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="$" id="Fy4-VD-WMA" userLabel="Main"/>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="7wV-0N-uxM">
-                        <barButtonItem key="rightBarButtonItem" title="settings" id="YhP-1x-IYM">
-                            <connections>
-                                <segue destination="UfY-qF-KgV" kind="show" id="R6j-iQ-egw"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1342" y="133"/>
+            <point key="canvasLocation" x="558" y="133"/>
         </scene>
-        <!--Item-->
+        <!--Chart-->
         <scene sceneID="AbU-al-ITO">
             <objects>
                 <viewController id="yQU-AS-mJ3" customClass="ChartViewController" customModule="dailyExchange" customModuleProvider="target" sceneMemberID="viewController">
@@ -72,12 +68,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="3Vb-ly-Xci"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="MVg-UU-qJc"/>
+                    <tabBarItem key="tabBarItem" title="Chart" id="MVg-UU-qJc" userLabel="Chart"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uI2-aX-XDa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1342" y="910"/>
+            <point key="canvasLocation" x="558" y="864"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="u2m-b8-Ldt">
@@ -90,32 +86,14 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="C60-kO-C2U" kind="relationship" relationship="viewControllers" id="bFR-NE-LdG"/>
                         <segue destination="yQU-AS-mJ3" kind="relationship" relationship="viewControllers" id="GPr-M0-0Hd"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="VgZ-Vm-aDp"/>
+                        <segue destination="UfY-qF-KgV" kind="relationship" relationship="viewControllers" id="ifi-8W-0I8"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="30S-A5-39V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-160" y="133.13343328335833"/>
-        </scene>
-        <!--Item-->
-        <scene sceneID="gjx-9A-50N">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="C60-kO-C2U" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="QJr-X0-m1E"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Jm8-76-CdI">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="yGH-Cx-63G"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LGY-Y5-NpO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="478.39999999999998" y="133.13343328335833"/>
         </scene>
     </scenes>
 </document>
