--- a/dailyExchange/dailyExchange/Base.lproj/Main.storyboard
+++ b/dailyExchange/dailyExchange/Base.lproj/Main.storyboard
@@ -55,31 +55,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="S7k-77-XVe">
-                                <rect key="frame" x="136.5" y="127" width="102" height="30"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9xU-FA-26a">
-                                        <rect key="frame" x="0.0" y="0.0" width="34" height="30"/>
-                                        <state key="normal" title="$"/>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O44-he-YbI">
-                                        <rect key="frame" x="34" y="0.0" width="34" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v6N-lT-YQ1">
-                                        <rect key="frame" x="68" y="0.0" width="34" height="30"/>
-                                        <state key="normal" title="Base"/>
-                                    </button>
-                                </subviews>
-                            </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="C8x-R5-5Q1">
-                                <rect key="frame" x="0.0" y="269" width="375" height="344"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="C8x-R5-5Q1">
+                                <rect key="frame" x="0.0" y="263" width="375" height="350"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ivj-tM-HmU">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExchangeRateTableViewCell" id="ivj-tM-HmU" customClass="ExchangeRateTableViewCell" customModule="dailyExchange" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ivj-tM-HmU" id="DsU-hS-icq">
@@ -111,6 +91,9 @@
                                                 </stackView>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SY0-ra-MMU">
                                                     <rect key="frame" x="311" y="7" width="51" height="31"/>
+                                                    <connections>
+                                                        <action selector="notificationSwitchToggled:" destination="ivj-tM-HmU" eventType="valueChanged" id="tOa-eg-qdA"/>
+                                                    </connections>
                                                 </switch>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notification" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qaO-eI-kAs">
                                                     <rect key="frame" x="219" y="11.5" width="88" height="20.5"/>
@@ -129,24 +112,37 @@
                                                 <constraint firstAttribute="trailing" secondItem="SY0-ra-MMU" secondAttribute="trailing" constant="15" id="zoF-0e-tGQ"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="denominatorLabel" destination="unL-Lh-9sX" id="sSd-lA-GrR"/>
+                                            <outlet property="notificationSwitch" destination="SY0-ra-MMU" id="qlj-FO-5PD"/>
+                                            <outlet property="numeratorLabel" destination="Hdi-xG-Z8s" id="ENG-2r-blQ"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f4-uy-2ML">
+                                <rect key="frame" x="94.5" y="132" width="187.5" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="$ / Base"/>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B8P-TV-Ovx">
-                                <rect key="frame" x="172" y="165" width="32" height="30"/>
+                                <rect key="frame" x="172" y="183" width="32" height="30"/>
                                 <state key="normal" title="save"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="B8P-TV-Ovx" firstAttribute="top" secondItem="3f4-uy-2ML" secondAttribute="bottom" constant="15" id="80R-X8-ARj"/>
                             <constraint firstItem="3Ef-cb-bex" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="1:3" id="BVd-II-GTb"/>
+                            <constraint firstItem="C8x-R5-5Q1" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="IwM-1t-ve4"/>
+                            <constraint firstItem="3f4-uy-2ML" firstAttribute="top" secondItem="3Ef-cb-bex" secondAttribute="bottom" constant="8" id="Kvs-UZ-ulU"/>
                             <constraint firstItem="B8P-TV-Ovx" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="bks-V3-Xky"/>
-                            <constraint firstItem="S7k-77-XVe" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="eSo-Xx-no0"/>
                             <constraint firstItem="3Ef-cb-bex" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fFQ-ui-lYu"/>
-                            <constraint firstItem="S7k-77-XVe" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="qGA-rr-l3K"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="S7k-77-XVe" secondAttribute="trailing" constant="8" id="rVT-7F-ieg"/>
-                            <constraint firstItem="S7k-77-XVe" firstAttribute="top" secondItem="3Ef-cb-bex" secondAttribute="bottom" constant="3" id="uEZ-eH-v5z"/>
-                            <constraint firstItem="B8P-TV-Ovx" firstAttribute="top" secondItem="S7k-77-XVe" secondAttribute="bottom" constant="8" id="wjz-a0-Whc"/>
+                            <constraint firstItem="3f4-uy-2ML" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fIR-TP-uET"/>
+                            <constraint firstItem="3f4-uy-2ML" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="1:2" id="kxs-J5-mal"/>
+                            <constraint firstItem="C8x-R5-5Q1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lkN-H4-PH3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="C8x-R5-5Q1" secondAttribute="bottom" constant="5" id="yO1-cb-GNl"/>
+                            <constraint firstItem="C8x-R5-5Q1" firstAttribute="top" secondItem="B8P-TV-Ovx" secondAttribute="bottom" constant="50" id="yhm-6o-cce"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
